@@ -1,2 +1,3 @@
 lattice      Lattice Demos
 intervals    Confidence intervals
+panel        Custom panel functions
